tests/baselines/reference/controlFlowAliasingCatchVariables(useunknownincatchvariables=true).errors.txt
controlFlowAliasingCatchVariables.ts(20,11): error TS2339: Property 'toUpperCase' does not exist on type 'unknown'.


==== controlFlowAliasingCatchVariables.ts (1 errors) ====
    try {}
    catch (e) {
        const isString = typeof e === 'string';
        if (isString) {
            e.toUpperCase(); // e string
        }
    
        if (typeof e === 'string') {
            e.toUpperCase(); // e string
        }
    }
    
    try {}
    catch (e) {
        const isString = typeof e === 'string';
    
        e = 1;
    
        if (isString) {
            e.toUpperCase(); // e any/unknown
              ~~~~~~~~~~~
!!! error TS2339: Property 'toUpperCase' does not exist on type 'unknown'.
        }
    
        if (typeof e === 'string') {
            e.toUpperCase(); // e string
        }
    }
    